fix: twitterシェア文言修正

--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -18,7 +18,7 @@
     <div class="flex justify-center pb-3">
       <div class='bg-twitter-400 text-white rounded-full h-16 2xl:h-20 w-16 2xl:w-20 flex items-center justify-center shadow-xl'>
         <%= link_to "https://twitter.com/intent/tweet?url=https://hoshime.herokuapp.com&text=HoshiMeに欲しいモノを投稿しました。&hashtags=HoshiMe,欲しいモノ,ランキング,お金,無駄&lang=ja", title: 'Twitter', target: :_blank, rel: 'noopener noreferrer'  do %>
-          <span><i class="fab fa-twitter text-3xl 2xl:text-4xl pt-1"></i></span>
+          <span><i class="fab fa-twitter text-3xl 2xl:text-4xl pt-1"></i>Twitterでシェア</span>
         <% end %>
       </div>
     </div>
