fix: コード修正

--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -22,14 +22,14 @@
                 <%= render @calculations %>
               </tbody>
             </table>
-            <div class="flex justify-center pb-3">
-              <div class='bg-twitter-400 text-white rounded-full h-16 2xl:h-20 w-16 2xl:w-20 flex items-center justify-center shadow-xl'>
-                <%= link_to "https://twitter.com/intent/tweet?&text=あなたが今一番欲しいものは【#{@calculations.first.item.name}】です。%0aお金があるなら今すぐ買いましょう！&url=https://hoshime.herokuapp.com%0a&hashtags=HoshiMe,ランキング,お金,無駄遣い&lang=ja", title: 'Twitter', target: :_blank, rel: 'noopener noreferrer'  do %>
-                  <span><i class="fab fa-twitter text-3xl 2xl:text-4xl pt-1"></i></span>
-                <% end %>
-              </div>
-            </div>
           </div>
+        </div>
+      </div>
+      <div class="flex justify-center pb-3">
+        <div class='bg-twitter-400 text-white text-md lg:text-xl rounded-full h-8 2xl:h-10 w-32 2xl:w-40 flex items-center justify-center shadow-xl'>
+          <%= link_to "https://twitter.com/intent/tweet?&text=あなたが今一番欲しいものは【#{@calculations.first.item.name}】です。%0aお金があるなら今すぐ買いましょう！&url=https://hoshime.herokuapp.com%0a&hashtags=HoshiMe,ランキング,お金,無駄遣い&lang=ja", title: 'Twitter', target: :_blank, rel: 'noopener noreferrer'  do %>
+            <span><i class="fab fa-twitter text-lg lg:text-2xl pt-1"></i>シェアする</span>
+          <% end %>
         </div>
       </div>
     </section>
