--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,10 +1,12 @@
 <div class="flex justify-center">
   <div class="px-4 2xl:pt-10">
-    <div class="text-gray-600 font-black text-5xl text-center py-4">HoshiMe</div>
-    <p class="text-gray-600 text-lg text-center underline">
-    欲しいものを買う優先度をランキング形式で提示して<br>無駄遣いを減らすサービス
+    <div class="flex justify-center pb-4 pt-6 lg:pt-3">
+      <%= image_pack_tag "top_title.png", size: "300x300" %>
+    </div>
+    <p class="text-gray-600 text-md lg:text-lg text-center">
+      購入したいものをランキング形式で提示して<br>無駄遣いを減らすサービス
     </p>
-    <div class="flex justify-end">
+    <div class="flex justify-end py-3 lg:py-0">
       <%= image_pack_tag "top_money.png", size: "100x100" %>
     </div>
     <div class="flex justify-center">
