--- a/app/views/calculations/show.html.erb
+++ b/app/views/calculations/show.html.erb
@@ -19,7 +19,7 @@
       <% end %>
     </div>
     <div class="m-3 flex justify-center">
-      <%= button_to "閉じる", calculations_path, method: :get, class: "cursor-pointer bg-yellow-500 hover:bg-yellow-700 text-white text-xs font-bold py-2 px-3.5 rounded" %>
+      <%= button_to t('.close'), calculations_path, method: :get, class: "cursor-pointer bg-yellow-500 hover:bg-yellow-700 text-white text-xs font-bold py-2 px-3.5 rounded" %>
     </div>
   </div>
 </div>
