--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="pt-2 flex justify-center" id="modal-close">
       <button class="cursor-pointer bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-5 rounded">
-        閉じる
+        <%= t('calculations.show.close') %>
       </button>
     </div>
   </div>
