--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -11,14 +11,14 @@
         <%= form_with model: @user, url: password_reset_path(@token), method: :put, local: true do |f| %>
           <div class="mb-6">
             <%= f.label :password, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.password_field :password, placeholder: "パスワード", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+            <%= f.password_field :password, placeholder: User.human_attribute_name(:password), class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
           </div>
           <div class="mb-6">
             <%= f.label :password_confirmation, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.password_field :password_confirmation, placeholder: "パスワード確認", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+            <%= f.password_field :password_confirmation, placeholder: User.human_attribute_name(:password_confirmation), class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
           </div>
           <div class="mb-6">
-            <%= f.submit '更新', class: "w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
+            <%= f.submit t('defaults.update'), class: "w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
           </div>
         <% end %>
       </div>
