--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -11,10 +11,10 @@
         <%= form_with url: password_resets_path, local: true do |f| %>
           <div class="mb-4">
             <%= f.label User.human_attribute_name(:email), class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.email_field :email, placeholder: "メールアドレス", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-yellow-100 focus:border-yellow-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+            <%= f.email_field :email, placeholder: User.human_attribute_name(:email), class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-yellow-100 focus:border-yellow-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
           </div>
           <div class="mb-6">
-            <%= f.submit '送信', class: "w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
+            <%= f.submit t('defaults.submit'), class: "w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
           </div>
         <% end %>
       </div>
