Fix: カーソルをポインターに変更

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,7 +30,7 @@
             <p class= "text-sm text-gray-400">例：12345abcdef</p>
           </div>
           <div class="mb-6">
-            <%= f.submit class: "w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
+            <%= f.submit class: "cursor-pointer w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
           </div>
         <% end %>
         <div class="flex justify-center border-t border-gray-300">
