--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -46,7 +46,7 @@
     <% if current_user.guest? %>
       <p class="text-center text-md lg:text-xl">ユーザー登録すると今登録したアイテムを引き継いで使うことができます。</p>
       <div class="flex justify-center py-7">
-        <%= button_to t('.no_account'), new_user_path, method: :get, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+        <%= button_to t('.no_account'), new_user_path, method: :get, class: "cursor-pointer text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
       </div>
     <% else %>
       <p class="text-center text-md lg:text-xl">他に追加したいものはありませんか？</p></p>
