--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -51,7 +51,7 @@
     <% else %>
       <p class="text-center text-md lg:text-xl">他に追加したいものはありませんか？</p></p>
       <div class="flex justify-center py-7">
-        <%= button_to t('items.new.add_item'), new_item_path, method: :get, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+        <%= button_to t('items.new.add_item'), new_item_path, method: :get, class: "cursor-pointer text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
       </div>
     <% end %>
   </div>
@@ -61,7 +61,7 @@
   </div>
   <p class="text-center text-md lg:text-2xl pt-5">欲しいものを追加しましょう！</p></p>
   <div class="flex justify-center py-7">
-    <%= button_to t('items.new.add_item'), new_item_path, method: :get, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+    <%= button_to t('items.new.add_item'), new_item_path, method: :get, class: "cursor-pointer text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
   </div>
 <% end %>
 
