--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,6 +1,6 @@
 <div class="flex justify-center">
   <div class="px-4 2xl:pt-10">
-    <div class="flex justify-center pt-0 lg:pt-3">
+    <div class="flex justify-center">
       <%= image_pack_tag "top_title.png", class: "w-3/4 lg:w-5/6" %>
     </div>
     <p class="text-gray-600 text-md lg:text-lg text-center">
