--- a/app/views/three_items/new.html.erb
+++ b/app/views/three_items/new.html.erb
@@ -86,11 +86,11 @@
     from: 0,
     to: 100000,
     step: 1000,
-    format: '%s 万円',
+    format: '%s円',
     scale: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, "10万円"],
     width: '100%',
     theme: "theme-blue",
-    showLabels: false,
+    showLabels: true,
     onstatechange: function(){
       $("#item_price").trigger('change');
     }
